--- a/css/styles.css
+++ b/css/styles.css
@@ -1098,6 +1098,7 @@ footer {
   }
   .logo {
     text-align: center;
+    margin: 50% 0px 0px 30%;
   }
   .banner-container {
     height: 100vh;
